--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -12,39 +14,68 @@
       <fx:include source="NavBarView.fxml" />
    </top>
    <left>
-      <AnchorPane prefHeight="578.0" prefWidth="381.0" BorderPane.alignment="CENTER">
+      <VBox spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Recent reviews">
+            <Label text="Recent reviews">
                <font>
                   <Font size="20.0" />
                </font>
+               <VBox.margin>
+                  <Insets left="5.0" top="20.0" />
+               </VBox.margin>
             </Label>
-            <VBox fx:id="recentReviewListVBox" layoutX="14.0" layoutY="55.0" spacing="10.0" />
-         </children></AnchorPane>
+            <VBox fx:id="recentReviewListVBox" prefWidth="300.0" spacing="10.0">
+               <padding>
+                  <Insets left="5.0" right="5.0" />
+               </padding>
+            </VBox>
+         </children>
+      </VBox>
    </left>
    <center>
       <ScrollPane prefHeight="578.0" prefWidth="637.0" BorderPane.alignment="CENTER">
          <content>
-            <VBox prefHeight="586.0" prefWidth="859.0">
+            <HBox spacing="5.0">
                <children>
-                  <AnchorPane prefHeight="586.0" prefWidth="872.0">
+                  <VBox prefHeight="586.0" prefWidth="475.0" spacing="10.0">
                      <children>
-                        <Label layoutX="21.0" layoutY="14.0" prefHeight="30.0" prefWidth="191.0" text="Top-rated books">
+                        <Label prefHeight="30.0" prefWidth="191.0" text="Top-rated books">
                            <font>
                               <Font size="20.0" />
                            </font>
+                           <VBox.margin>
+                              <Insets left="5.0" top="20.0" />
+                           </VBox.margin>
                         </Label>
-                        <Label layoutX="472.0" layoutY="14.0" prefHeight="30.0" prefWidth="196.0" text="Trending (7 days)">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                        </Label>
-                        <VBox fx:id="topRatedBookListVBox" layoutX="21.0" layoutY="61.0" prefHeight="200.0" prefWidth="401.0" spacing="10.0" />
-                        <VBox fx:id="trendingBookListVBox" layoutX="461.0" layoutY="61.0" prefHeight="200.0" prefWidth="401.0" spacing="10.0" />
+                        <VBox fx:id="topRatedBookListVBox" prefHeight="200.0" prefWidth="450.0" spacing="10.0">
+                           <VBox.margin>
+                              <Insets left="5.0" />
+                           </VBox.margin>
+                        </VBox>
                      </children>
-                  </AnchorPane>
+                     <HBox.margin>
+                        <Insets left="5.0" />
+                     </HBox.margin>
+                  </VBox>
+                  <VBox prefHeight="586.0" prefWidth="475.0" spacing="10.0">
+                     <children>
+                        <Label prefHeight="30.0" prefWidth="196.0" text="Trending (7 days)">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets left="5.0" top="20.0" />
+                           </VBox.margin>
+                        </Label>
+                        <VBox fx:id="trendingBookListVBox" prefHeight="200.0" prefWidth="450.0" spacing="10.0">
+                           <VBox.margin>
+                              <Insets left="5.0" />
+                           </VBox.margin>
+                        </VBox>
+                     </children>
+                  </VBox>
                </children>
-            </VBox>
+            </HBox>
          </content>
       </ScrollPane>
    </center>
