--- a/src/main/resources/org/proview/test/PersonalActivityCellView.fxml
+++ b/src/main/resources/org/proview/test/PersonalActivityCellView.fxml
@@ -8,10 +8,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<Button mnemonicParsing="false" styleClass="book-cell-button" stylesheets="@styles/ListView.css" onAction="#onMouseClick" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.PersonalActivityCellView">
+<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="book-cell-button" stylesheets="@styles/ListView.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.PersonalActivityCellView">
    <graphic>
-      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="350.0">
+      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="300.0">
          <children>
             <ImageView fx:id="coverImageView" fitHeight="75.0" fitWidth="46.875" pickOnBounds="true" preserveRatio="true" />
             <VBox>
@@ -19,14 +18,6 @@
                   <HBox>
                      <children>
                         <Label fx:id="activityTypeLabel" alignment="TOP_LEFT" prefHeight="20.0" prefWidth="200.0" text="Reviewed: Book #abc&#10;" wrapText="true" />
-                        <Label fx:id="timeLabel" alignment="TOP_RIGHT" contentDisplay="TOP" prefHeight="17.0" prefWidth="100.0" text="3 hours ago" wrapText="true">
-                           <font>
-                              <Font name="System Italic" size="12.0" />
-                           </font>
-                           <padding>
-                              <Insets right="10.0" />
-                           </padding>
-                        </Label>
                      </children>
                      <padding>
                         <Insets top="5.0" />
@@ -35,13 +26,21 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label fx:id="descriptionLabel" alignment="TOP_LEFT" prefHeight="40.0" prefWidth="303.0" text="This is good etc...&#10;" wrapText="true">
+                  <Label fx:id="descriptionLabel" alignment="TOP_LEFT" prefHeight="34.0" prefWidth="293.0" text="This is good etc...&#10;abc" wrapText="true">
                      <font>
                         <Font name="System Italic" size="12.0" />
                      </font>
                      <VBox.margin>
                         <Insets left="10.0" />
                      </VBox.margin>
+                  </Label>
+                  <Label fx:id="timeLabel" alignment="TOP_RIGHT" contentDisplay="TOP" prefHeight="17.0" prefWidth="376.0" text="3 hours ago" wrapText="true">
+                     <font>
+                        <Font name="System Italic" size="10.0" />
+                     </font>
+                     <padding>
+                        <Insets right="10.0" />
+                     </padding>
                   </Label>
                </children>
             </VBox>
