--- a/src/main/resources/org/proview/test/SearchResultView.fxml
+++ b/src/main/resources/org/proview/test/SearchResultView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -15,32 +16,42 @@
       <AnchorPane prefHeight="578.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
-      <AnchorPane prefHeight="49.0" prefWidth="1000.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="0.0" prefWidth="1300.0" BorderPane.alignment="CENTER" />
    </bottom>
    <left>
-      <AnchorPane prefHeight="578.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="645.0" prefWidth="250.0" BorderPane.alignment="CENTER" />
    </left>
    <center>
-      <ScrollPane BorderPane.alignment="CENTER">
+      <ScrollPane prefHeight="645.0" prefWidth="635.0" BorderPane.alignment="CENTER">
          <content>
-            <VBox>
+            <VBox prefHeight="579.0" prefWidth="900.0" spacing="10.0">
                <children>
-                  <AnchorPane prefHeight="578.0" prefWidth="1026.0">
-                     <children>
-                        <Label layoutX="62.0" layoutY="28.0" prefHeight="30.0" prefWidth="499.0" text="Top results">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="605.0" layoutY="28.0" prefHeight="30.0" prefWidth="499.0" text="More results from Google Books">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                        </Label>
-                        <VBox fx:id="topResultListVBox" layoutX="62.0" layoutY="75.0" prefHeight="200.0" prefWidth="400.0" />
-                        <VBox fx:id="googleBookListVBox" layoutX="605.0" layoutY="75.0" prefHeight="200.0" prefWidth="400.0" />
-                     </children>
-                  </AnchorPane>
+                  <Label prefHeight="30.0" prefWidth="499.0" text="Top results">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="20.0" top="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <VBox fx:id="topResultListVBox" prefHeight="296.0" prefWidth="800.0" spacing="10.0">
+                     <VBox.margin>
+                        <Insets left="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <Label prefHeight="30.0" prefWidth="499.0" text="More results from Google Books">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <VBox fx:id="googleBookListVBox" prefHeight="281.0" prefWidth="800.0" spacing="10.0">
+                     <VBox.margin>
+                        <Insets left="20.0" />
+                     </VBox.margin>
+                  </VBox>
                </children>
             </VBox>
          </content>
