--- a/src/main/resources/org/proview/test/SearchResultView.fxml
+++ b/src/main/resources/org/proview/test/SearchResultView.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
@@ -155,6 +156,14 @@
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
             </RangeSlider>
+            <VBox alignment="TOP_RIGHT" prefHeight="32.0" prefWidth="300.0" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets right="10.0" />
+               </VBox.margin>
+               <children>
+                  <Button fx:id="applyFiltersButton" mnemonicParsing="false" onAction="#onApplyFiltersButtonClicked" text="Apply" />
+               </children>
+            </VBox>
            
          </children>
       </VBox>
