--- a/src/main/resources/org/proview/test/GameView.fxml
+++ b/src/main/resources/org/proview/test/GameView.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -12,8 +14,13 @@
         <fx:include source="NavBarView.fxml" />
     </top>
     <center>
-      <VBox alignment="CENTER" prefHeight="700.0" prefWidth="1300.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="700.0" prefWidth="900.0" BorderPane.alignment="CENTER">
          <children>
+            <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <VBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </VBox.margin>
+            </ImageView>
             <HBox alignment="CENTER" prefHeight="38.0" prefWidth="772.0" spacing="20.0">
                <children>
                   <Button fx:id="fiftyFiftyButton" mnemonicParsing="false" onAction="#onFiftyFiftyButtonClicked" prefWidth="200.0" text="50:50" />
@@ -72,6 +79,9 @@
             </VBox>
             <Button fx:id="nextButton" mnemonicParsing="false" onAction="#onNextButtonClicked" text="Next" />
          </children>
+         <BorderPane.margin>
+            <Insets bottom="50.0" left="100.0" right="100.0" top="50.0" />
+         </BorderPane.margin>
       </VBox>
    </center>
 </BorderPane>
