--- a/src/main/resources/org/proview/test/styles/RegisterView.css
+++ b/src/main/resources/org/proview/test/styles/RegisterView.css
@@ -35,7 +35,7 @@
     -fx-font-size: 14px;
     -fx-font-weight: bold;
     -fx-text-fill: #ffffff;
-    -fx-background-color: -dark-blue;
+    -fx-background-color: -blue;
     -fx-background-radius: 10px;
     -fx-padding: 7px 20px;
 }
