--- a/src/main/resources/org/proview/test/GameView.fxml
+++ b/src/main/resources/org/proview/test/GameView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -16,16 +17,11 @@
     <center>
       <VBox alignment="CENTER" prefHeight="700.0" prefWidth="900.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-               <VBox.margin>
-                  <Insets bottom="10.0" top="10.0" />
-               </VBox.margin>
-            </ImageView>
             <HBox alignment="CENTER" prefHeight="38.0" prefWidth="772.0" spacing="20.0">
                <children>
                   <Button fx:id="fiftyFiftyButton" mnemonicParsing="false" onAction="#onFiftyFiftyButtonClicked" prefWidth="200.0" text="50:50" />
                   <Button fx:id="shieldButton" mnemonicParsing="false" onAction="#onShieldButtonClicked" prefWidth="200.0" text="Shield" />
-                  <Button fx:id="doubleButton" mnemonicParsing="false" onAction="#onDoubleButtonClicked" prefWidth="200.0" text="2X" />
+                  <Button fx:id="doubleButton" mnemonicParsing="false" onAction="#onDoubleButtonClicked" prefWidth="200.0" text="Double" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="41.0" prefWidth="772.0" spacing="20.0">
@@ -45,22 +41,23 @@
             </HBox>
             <Label fx:id="pointLabel" text="Score: ">
                <font>
-                  <Font size="28.0" />
+                  <Font size="24.0" />
                </font>
             </Label>
             <Label fx:id="lifeRemainsLabel" text="Life remains: ">
                <font>
-                  <Font size="15.0" />
+                  <Font size="14.0" />
                </font></Label>
-            <HBox alignment="CENTER" prefWidth="1300.0">
-               <children>
-                  <Label fx:id="questionLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="-Infinity" prefWidth="1000.0" text="Question" textAlignment="CENTER" wrapText="true" HBox.hgrow="ALWAYS">
-                     <font>
-                        <Font size="29.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
+            <ImageView fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <VBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </VBox.margin>
+            </ImageView>
+            <Label fx:id="questionLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="35.0" prefWidth="1121.0" text="Question" textAlignment="CENTER" wrapText="true">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
@@ -82,6 +79,10 @@
          <BorderPane.margin>
             <Insets bottom="50.0" left="100.0" right="100.0" top="50.0" />
          </BorderPane.margin>
+         <stylesheets>
+            <URL value="@styles/styles.css" />
+            <URL value="@styles/GameView.css" />
+         </stylesheets>
       </VBox>
    </center>
 </BorderPane>
