--- a/src/main/resources/org/proview/test/styles/EditProfileView.css
+++ b/src/main/resources/org/proview/test/styles/EditProfileView.css
@@ -31,3 +31,16 @@
 .button:hover {
     -fx-background-color: -dark-blue;
 }
+
+.back-button {
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
+    -fx-background-color: #d46b2a;
+    -fx-background-radius: 10px;
+    -fx-padding: 7px 20px;
+}
+
+.back-button:hover {
+    -fx-background-color: -dark-blue;
+}
