--- a/src/main/resources/org/proview/test/EndGameView.fxml
+++ b/src/main/resources/org/proview/test/EndGameView.fxml
@@ -32,7 +32,7 @@
             </Label>
             <Label styleClass="description-label" text="Better luck next time." />
             <Button mnemonicParsing="false" onAction="#onRestartButtonClicked" prefHeight="35.0" prefWidth="111.0" text="Restart" />
-            <Button mnemonicParsing="false" onAction="#onBackButtonClicked" prefHeight="35.0" prefWidth="111.0" text="Back">
+            <Button mnemonicParsing="false" onAction="#onBackButtonClicked" prefHeight="35.0" prefWidth="111.0" styleClass="back-button" text="Back">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
