--- a/src/main/resources/org/proview/test/RegisterView.fxml
+++ b/src/main/resources/org/proview/test/RegisterView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="700.0" prefWidth="1300.0" stylesheets="@styles/RegisterView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.RegisterView">
-   <VBox alignment="CENTER" layoutX="435.0" layoutY="24.0" onKeyReleased="#onKeyReleased" prefHeight="345.0" prefWidth="419.0" spacing="15.0" styleClass="register-form" stylesheets="@styles/styles.css">
+   <VBox alignment="CENTER" layoutX="435.0" layoutY="24.0" onKeyReleased="#onKeyReleased" prefHeight="345.0" prefWidth="419.0" spacing="15.0" styleClass="register-form">
       <children>
          <ImageView fx:id="avatarField" fitHeight="150.0" fitWidth="274.0" pickOnBounds="true" preserveRatio="true" />
          <Button fx:id="addAvatarButton" alignment="CENTER" mnemonicParsing="false" onAction="#onAddAvatarButtonClick" text="Add Avatar" />
@@ -26,10 +27,14 @@
          <PasswordField fx:id="registerPasswordField" alignment="CENTER" promptText="Password" styleClass="input" />
          <PasswordField fx:id="registerConfirmPasswordField" alignment="CENTER" promptText="Confirm Password" styleClass="input" />
          <Button fx:id="confirmButton" mnemonicParsing="false" onAction="#onConfirmButtonClick" prefHeight="45.0" prefWidth="398.0" text="Confirm" />
-         <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="35.0" prefWidth="403.0" text="Back" />
+         <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClick" prefHeight="35.0" prefWidth="403.0" styleClass="back-button" text="Back" />
       </children>
       <VBox.margin>
          <Insets bottom="0.0" left="0.0" right="0.0" top="0.0" />
       </VBox.margin>
+      <stylesheets>
+         <URL value="@styles/styles.css" />
+         <URL value="@styles/ReviewCellView.css" />
+      </stylesheets>
    </VBox>
 </AnchorPane>
