--- a/src/main/resources/org/proview/test/styles/EndGameView.css
+++ b/src/main/resources/org/proview/test/styles/EndGameView.css
@@ -27,6 +27,15 @@
     -fx-padding: 7px 20px;
 }
 
+.back-button {
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
+    -fx-background-color: #d46b2a;
+    -fx-background-radius: 10px;
+    -fx-padding: 7px 20px;
+}
+
 .button:hover {
     -fx-background-color: -dark-blue;
 }
