--- a/src/main/resources/org/proview/test/styles/GameView.css
+++ b/src/main/resources/org/proview/test/styles/GameView.css
@@ -1,3 +1,11 @@
+.assistance-button:pressed .ikonli-font-icon,
+.assistance-button:focused .ikonli-font-icon,
+.assistance-button:visited .ikonli-font-icon,
+.assistance-button:active .ikonli-font-icon,
+.assistance-button:hover .ikonli-font-icon {
+    -fx-icon-color: #FFFFFF;
+}
+
 .game-form {
     -fx-padding: 20px;
     -fx-background-color: #f0f0f0;
@@ -52,6 +60,12 @@
     -fx-border-radius: 10px;
     -fx-background-radius: 10px;
     -fx-cursor: hand;
+}
+.answer-button:disabled {
+    -fx-background-color: #A8A8A8; /* Light gray to indicate disabled */
+    -fx-text-fill: #FFFFFF; /* Keep the text fill white */
+    -fx-opacity: 0.7; /* Optional: Slight transparency to differentiate */
+    -fx-cursor: not-allowed; /* Optional: Change the cursor to indicate disabled */
 }
 
 .next-button {
