--- a/src/main/resources/org/proview/test/SearchResultView.fxml
+++ b/src/main/resources/org/proview/test/SearchResultView.fxml
@@ -31,7 +31,7 @@
          <content>
             <VBox prefHeight="579.0" prefWidth="900.0" spacing="10.0">
                <children>
-                  <Label prefHeight="30.0" prefWidth="499.0" text="Top results">
+                  <Label prefHeight="30.0" prefWidth="499.0" text="Top results:">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -49,7 +49,7 @@
                         <Insets left="20.0" />
                      </VBox.margin>
                      <children>
-                        <Label prefHeight="30.0" prefWidth="304.0" text="More results from Google Books">
+                        <Label prefHeight="30.0" prefWidth="304.0" text="More results from Google Books:">
                            <font>
                               <Font size="20.0" />
                            </font>
@@ -162,12 +162,12 @@
                   <Insets left="10.0" right="10.0" />
                </VBox.margin>
             </RangeSlider>
-            <VBox alignment="TOP_RIGHT" prefHeight="32.0" prefWidth="300.0" VBox.vgrow="ALWAYS">
+            <VBox alignment="TOP_CENTER" prefHeight="32.0" prefWidth="300.0" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets right="10.0" />
                </VBox.margin>
                <children>
-                  <Button fx:id="applyFiltersButton" mnemonicParsing="false" onAction="#onApplyFiltersButtonClicked" text="Apply" />
+                  <Button fx:id="applyFiltersButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onApplyFiltersButtonClicked" text="Apply" textAlignment="CENTER" />
                </children>
             </VBox>
            
