--- a/src/main/resources/org/proview/test/ProfileView.fxml
+++ b/src/main/resources/org/proview/test/ProfileView.fxml
@@ -12,54 +12,71 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<BorderPane fx:id="profileBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.ProfileView">
+<BorderPane fx:id="profileBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.ProfileView">
    <top>
       <fx:include source="NavBarView.fxml" />
    </top>
    <left>
-      <VBox BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fx:id="avatarImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-            <HBox>
+      <ScrollPane hbarPolicy="NEVER" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+         <content>
+            <VBox spacing="10.0">
                <children>
-                  <VBox>
+                  <HBox alignment="CENTER">
                      <children>
-                        <Label fx:id="nameField" contentDisplay="CENTER" prefHeight="23.0" prefWidth="163.0" text="Name" textAlignment="CENTER">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <Label fx:id="emailField" alignment="BOTTOM_LEFT" text="Email">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
+                        <ImageView fx:id="avatarImageView" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
                      </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER" spacing="20.0">
+                     <children>
+                        <VBox>
+                           <children>
+                              <Label fx:id="nameField" contentDisplay="CENTER" prefHeight="23.0" prefWidth="163.0" text="Name" textAlignment="CENTER">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </Label>
+                              <Label fx:id="emailField" alignment="BOTTOM_LEFT" text="Email">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </VBox>
+                        <Button fx:id="editProfileButton" mnemonicParsing="false" onAction="#onEditProfileButtonClick">
+                           <graphic>
+                              <FontIcon iconLiteral="far-edit" iconSize="14">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </FontIcon>
+                           </graphic>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="5.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <VBox fx:id="recentActivityListVBox" prefWidth="300.0" spacing="5.0">
+                     <VBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </VBox.margin>
                   </VBox>
-                  <Button fx:id="editProfileButton" mnemonicParsing="false" onAction="#onEditProfileButtonClick">
-                     <graphic>
-                        <FontIcon iconLiteral="far-edit" iconSize="24">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </FontIcon>
-                     </graphic>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </Button>
                </children>
-               <VBox.margin>
-                  <Insets left="5.0" />
-               </VBox.margin>
-            </HBox>
-            <VBox fx:id="recentActivityListVBox" prefWidth="300.0">
-               <VBox.margin>
-                  <Insets left="5.0" right="5.0" />
-               </VBox.margin>
             </VBox>
-         </children>
-      </VBox>
+         </content>
+      </ScrollPane>
    </left>
    <center>
       <ScrollPane>
